sonarr/sonarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: sonarr
spec:
  type: ClusterIP
  ports:
    - port: 8989
      targetPort: 8989
  selector:
    app: sonarr
